# redback-jax

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  GPU_SETUP.md  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst  transient_tutorial.rst
examples/: arnett_mcmc.py  arnett_ns.py  arnett_ns_fast.py  arnett_ns_quick.py  arnett_to_magnitudes.py  basic_usage.py  general_magnetar_fitting.ipynb  general_magnetar_fitting.py  test_ns_setup.py
examples/nested_sampling/: README.md  arnett_ns.py  arnett_ns_quick.py  test_setup.py
notebooks/: general_magnetar_bayesian.ipynb  general_magnetar_bayesian_executed.ipynb  general_magnetar_speed_test.ipynb  general_magnetar_speed_test_executed.ipynb  general_magnetar_validation.ipynb  general_magnetar_validation_executed.ipynb
redback_jax/: __init__.py  bandflux_integration.py  constants.py  conversions.py  interaction_processes.py  phenomenological_models.py  photosphere.py  sed.py  sources.py  transient.py
redback_jax/inference/: __init__.py  likelihood.py  mcmc_sampler.py  nested_sampler.py  prior.py  sampler.py
redback_jax/models/: __init__.py  kilonova.py  registry.py  sed_features.py  shock_powered_models.py  spectra_model.py  supernova_models.py  tde_models.py
redback_jax/utils/: __init__.py  citation_wrapper.py  cosmology.py  plotting.py
tests/unit/: test_conversions.py  test_inference.py  test_interaction_processes.py  test_kilonova.py  test_likelihood_modes.py  test_models.py  test_package.py  test_phenomenological_models.py  test_photosphere.py  test_sampler.py  test_sources.py  test_transient.py  test_utils.py
tests/unit/models/: test_general_magnetar.py  test_registry.py  test_sed_features.py  test_supernova_models.py
