[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "redback-jax"
version = "0.1.0"
description = "A lightweight JAX-only version of redback for electromagnetic transient analysis"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Nikhil Sarin", email = "nsarin.astro@gmail.com"}
]
maintainers = [
    {name = "Nikhil Sarin", email = "nsarin.astro@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["astronomy", "astrophysics", "transients", "bayesian", "jax"]
requires-python = ">=3.12"
dependencies = [
    "astropy>=4.0.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "jax-bandflux>=0.3.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "unxt",
    "wcosmo",
]

[project.optional-dependencies]
all = [
    "numpyro>=0.12.0",
    "blackjax>=1.0.0",
    "optax>=0.1.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=4.0",
    "coverage[toml]>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "pre-commit>=2.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
    "nbsphinx>=0.8",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
    "nbsphinx>=0.8",
]

[project.urls]
Homepage = "https://github.com/nikhil-sarin/redback-jax"
Repository = "https://github.com/nikhil-sarin/redback-jax"
Documentation = "https://redback-jax.readthedocs.io/"
"Bug Tracker" = "https://github.com/nikhil-sarin/redback-jax/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["redback_jax*"]

[tool.setuptools.package-data]
redback_jax = ["priors/*", "tables/*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=redback_jax",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["redback_jax"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "versioneer.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true